<resources>
    <string name="app_name">UniPass-Android-SDK</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="loginAuth">Login Auth</string>
    <string name="loginAuthEmail">Login Auth Email</string>
    <string name="logout">Logout</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="user_address">User Address</string>
    <string name="sign_message">Sign Message</string>
    <string name="test_sign_message">Sign message 签名消息</string>
    <string name="signature">signature</string>

</resources>